data/Java/18-missing-return-value/1/[M]Error.txt
http://www.cs.pomona.edu/~dkauchak/classes/f10/cs051-f10/handouts/JavaErrorsExplained.pdf
MyClass.java:4: error: incompatible types: missing return value
        return;
        ^